--- a/index.html
+++ b/index.html
@@ -23,22 +23,22 @@
             <button><img src="images/search.png" alt="search"></button>
         </div>
         <p class="error-text">Invalid city name</p>
-        <div class="data">
-            <img src="images/rain.png" alt="" class="weather-icon fade">
-            <h1 class="temp fade">22°C</h1>
-            <h2 class="city-name fade">Berlin</h2>
+        <div class="data hide-data">
+            <img src="" alt="" class="weather-icon fade">
+            <h1 class="temp fade"></h1>
+            <h2 class="city-name fade"></h2>
             <div class="details">
                 <div class="col">
                     <img src="images/humidity.png" alt="">
                     <div>
-                        <p class="humidity fade">50%</p>
+                        <p class="humidity fade"></p>
                         <p>humidity</p>
                     </div>
                 </div>
                 <div class="col">
                     <img src="images/wind.png" alt="">
                     <div>
-                        <p class="wind fade">15 km/h</p>
+                        <p class="wind fade"></p>
                         <p>wind</p>
                     </div>
                 </div>
